==> TMRh20/AutoAnalogAudio/src/NRF54l15/AutoAnalogAudio.cpp <==
    #include "../AutoAnalogAudio.h"
    #include "nrf54l15_hal_support_internal.h"
        #define myPDM NRF_PDM20
    #define PDM_IRQ_PRIORITY 7
        #define NRF_PDM_FREQ_1280K (0x0A000000UL) ///< PDM_CLK= 1.280 MHz (32 MHz / 25) => Fs= 20000 Hz
        #define NRF_PDM_FREQ_2667K (0x15000000UL)
        #define NRF_PDM_FREQ_2000K (0x10000000UL)
    #define DEFAULT_PDM_GAIN 40
    #define DEFAULT_PWM_PIN  11 // GPIO Pin number
    #define DEFAULT_PWM_PORT 1 // On XIAO port 0 is for pins 1-5 port 1 is for all higher pins
        #define PIN_PDM_DIN 35
        #define PIN_PDM_PWR -1

void AutoAnalog::begin(uint8_t enADC, uint8_t enDAC, uint8_t _useI2S)
{

    maxBufferSize = maxBufferSize > 0 ? maxBufferSize : MAX_BUFFER_SIZE;

    // Fix for backward compatiblity with badly thought out changes
    if (_useI2S == 1) {
        enDAC = 2;
    }
    else if (_useI2S == 2) {
        enADC = 2;
    }
    else if (_useI2S == 3) {
        enADC = 2;
        enDAC = 2;
    }
    else if (_useI2S == 4 || _useI2S == 5) {
        enADC = 3;
    }
    else if (_useI2S == 6) {
        enADC = 3;
        enDAC = 2;
    }

    enableADC = enADC;
    enableDAC = enDAC;

    if (enADC) {
        if (!adcBuffersAllocated) {
            adcBuffersAllocated = true;
            adcBuf0 = reinterpret_cast<uint16_t*>(malloc(maxBufferSize * 2));
            memset(adcBuf0, 0, maxBufferSize * 2);
            adcBuf1 = reinterpret_cast<uint16_t*>(malloc(maxBufferSize * 2));
            memset(adcBuf1, 0, maxBufferSize * 2);
        }
        adcSetup();
    }

    if (enDAC) {
        if (!dacBuffersAllocated) {
            dacBuffersAllocated = true;
            dacBuf0 = reinterpret_cast<uint16_t*>(malloc(maxBufferSize * 2));
            memset(dacBuf0, 0, maxBufferSize * 2);
            dacBuf1 = reinterpret_cast<uint16_t*>(malloc(maxBufferSize * 2));
            memset(dacBuf1, 0, maxBufferSize * 2);
        }
        dacSetup();
    }
}

void AutoAnalog::setSampleRate(uint32_t sampRate, bool stereo)
{

    if (enableDAC == 1) {
        NRF_PWM20->TASKS_STOP = 1;
        uint32_t timer = millis();
        while (NRF_PWM20->EVENTS_STOPPED == 0) {
            if (millis() - timer > 1000) {
                break;
            }
        }

        NRF_PWM20->COUNTERTOP = (((uint16_t)((16000000 / sampRate))) << PWM_COUNTERTOP_COUNTERTOP_Pos);
        NRF_PWM20->TASKS_DMA.SEQ[0].START = 1;
    }

    if (enableDAC == 2 || enableADC == 2) {

        if (stereo) {
            NRF_I2S->CONFIG.CHANNELS = I2S_CONFIG_CHANNELS_CHANNELS_Stereo << I2S_CONFIG_CHANNELS_CHANNELS_Pos;
        }
        else {
            NRF_I2S->CONFIG.CHANNELS = I2S_CONFIG_CHANNELS_CHANNELS_Left << I2S_CONFIG_CHANNELS_CHANNELS_Pos;
        }

            if (sampRate <= 16000) {
                NRF_I2S->CONFIG.MCKFREQ = I2S_CONFIG_MCKFREQ_MCKFREQ_32MDIV16 << I2S_CONFIG_MCKFREQ_MCKFREQ_Pos;
                NRF_I2S->CONFIG.RATIO = I2S_CONFIG_RATIO_RATIO_128X << I2S_CONFIG_RATIO_RATIO_Pos;
            }
            else if (sampRate <= 22500) {
                NRF_I2S->CONFIG.MCKFREQ = I2S_CONFIG_MCKFREQ_MCKFREQ_32MDIV15 << I2S_CONFIG_MCKFREQ_MCKFREQ_Pos;
                NRF_I2S->CONFIG.RATIO = I2S_CONFIG_RATIO_RATIO_128X << I2S_CONFIG_RATIO_RATIO_Pos;
            }
            else if (sampRate <= 24000) {
                NRF_I2S->CONFIG.MCKFREQ = I2S_CONFIG_MCKFREQ_MCKFREQ_32MDIV11 << I2S_CONFIG_MCKFREQ_MCKFREQ_Pos;
                NRF_I2S->CONFIG.RATIO = I2S_CONFIG_RATIO_RATIO_128X << I2S_CONFIG_RATIO_RATIO_Pos;
            }
            else if (sampRate <= 32000) {
                NRF_I2S->CONFIG.MCKFREQ = I2S_CONFIG_MCKFREQ_MCKFREQ_32MDIV16 << I2S_CONFIG_MCKFREQ_MCKFREQ_Pos;
                NRF_I2S->CONFIG.RATIO = I2S_CONFIG_RATIO_RATIO_64X << I2S_CONFIG_RATIO_RATIO_Pos;
            }
            else if (sampRate <= 45000) {
                NRF_I2S->CONFIG.MCKFREQ = I2S_CONFIG_MCKFREQ_MCKFREQ_32MDIV23 << I2S_CONFIG_MCKFREQ_MCKFREQ_Pos;
                NRF_I2S->CONFIG.RATIO = I2S_CONFIG_RATIO_RATIO_32X << I2S_CONFIG_RATIO_RATIO_Pos;
            }
        
    }

    if (enableADC == 1) {
        struct PwmTiming* myTiming;
        computePwmTiming(sampRate, myTiming);
        myPDM->PRESCALER = myTiming->prescaler;
    }

    if (enableADC == 3) {
        NRF_SAADC->SAMPLERATE = 16000000 / sampRate / 2 | SAADC_SAMPLERATE_MODE_Timers << SAADC_SAMPLERATE_MODE_Pos;
    }
}

void AutoAnalog::getADC(uint32_t samples)
{

    if (enableADC == 2) {

        bool started = false;
        if (NRF_I2S->ENABLE == 0) {
            NRF_I2S->ENABLE = 1;
            started = true;
        }
        else {
            uint32_t timeout = millis() + 1000;
            while (NRF_I2S->EVENTS_RXPTRUPD == 0) {
                if (millis() > timeout) { 
                    return;
                }
            }
        }

        if (adcWhichBuf == 0) {
            NRF_I2S->RXD.PTR = (uint32_t)&adcBuf0[0];
        }
        else {
            NRF_I2S->RXD.PTR = (uint32_t)&adcBuf1[0];
        }
        uint8_t divider = 2;
        if (adcBitsPerSample == 24 || adcBitsPerSample == 32) {
            divider = 4;
        }
        else if (adcBitsPerSample == 8) {
            divider = 1;
        }

        if (enableDAC != 2) { // Only update MAXCNT if I2S output is disabled
            NRF_I2S->RXTXD.MAXCNT = samples * divider;
        }

        NRF_I2S->EVENTS_RXPTRUPD = 0;

        if (adcBitsPerSample == 24 || adcBitsPerSample == 32) {
            if (adcBitsPerSample == 24 && NRF_I2S->CONFIG.SWIDTH != I2S_CONFIG_SWIDTH_SWIDTH_24Bit << I2S_CONFIG_SWIDTH_SWIDTH_Pos) {
                NRF_I2S->CONFIG.SWIDTH = I2S_CONFIG_SWIDTH_SWIDTH_24Bit << I2S_CONFIG_SWIDTH_SWIDTH_Pos;
            }else
            if (adcBitsPerSample == 32 && NRF_I2S->CONFIG.SWIDTH != I2S_CONFIG_SWIDTH_SWIDTH_32Bit << I2S_CONFIG_SWIDTH_SWIDTH_Pos) {
                NRF_I2S->CONFIG.SWIDTH = I2S_CONFIG_SWIDTH_SWIDTH_32Bit << I2S_CONFIG_SWIDTH_SWIDTH_Pos;
            }
            
            if (adcWhichBuf == 0) {
                memcpy(adcBuffer16, adcBuf0, samples * 4);
            }
            else {
                memcpy(adcBuffer16, adcBuf1, samples * 4);
            }
        }
        else if (adcBitsPerSample == 16) {
            if (adcWhichBuf == 0) {
                memcpy(adcBuffer16, adcBuf0, samples * 2);
            }
            else {
                memcpy(adcBuffer16, adcBuf1, samples * 2);
            }
        }
        else if (adcBitsPerSample == 8) {
            if (adcWhichBuf == 0) {
                //memcpy(adcBuffer, adcBuf0, samples);
                for(int i=0; i<samples; i++){
                  adcBuffer[i] = (adcBuf0[i] >> 6) - 127;
                }
            }
            else {
                //memcpy(adcBuffer, adcBuf1, samples);
                for(int i=0; i<samples; i++){
                  adcBuffer[i] = (adcBuf1[i] >> 6) - 127;
                }
            }
        }

        adcWhichBuf = !adcWhichBuf;
        if (started) {
            NRF_I2S->TASKS_START = 1;
        }
    }
    else if (enableADC == 1) {
        while (!adcReady) {
            __WFE();
        };
        aSize = samples;
        adcReady = false;
    }
    else if (enableADC == 3) {
        while (!adcReady) {Serial.println("p");
        }
        aSize = samples;
    }
}

void AutoAnalog::feedDAC(uint8_t dacChannel, uint32_t samples, bool startInterrupts)
{

    if (enableDAC == 2) {

        bool started = false;
        if (NRF_I2S->ENABLE == 0) {
            NRF_I2S->ENABLE = 1;
            started = true;
        }
        else {
            uint32_t timeout = millis() + 1000;
            while (NRF_I2S->EVENTS_TXPTRUPD == 0) {
                if (millis() > timeout) {
                    return;
                }
            }
        }

        if (dacBitsPerSample == 8) {
            if (whichBuf) {
                for (uint32_t i = 0; i < samples; i++) {
                    dacBuf0[i] = dacBuffer[i] << 7;
                }
                NRF_I2S->TXD.PTR = (uint32_t)&dacBuf0[0];
            }
            else {
                for (uint32_t i = 0; i < samples; i++) {
                    dacBuf1[i] = dacBuffer[i] << 7;
                }
                NRF_I2S->TXD.PTR = (uint32_t)&dacBuf1[0];
            }
        }
        else if (dacBitsPerSample == 16) {
            if (whichBuf) {
                memcpy(dacBuf0, dacBuffer16, samples * 2);
                NRF_I2S->TXD.PTR = (uint32_t)&dacBuf0[0];
            }
            else {
                memcpy(dacBuf1, dacBuffer16, samples * 2);
                NRF_I2S->TXD.PTR = (uint32_t)&dacBuf1[0];
            }
        }
        else if (dacBitsPerSample == 24 || dacBitsPerSample == 32) {
            if (dacBitsPerSample == 24 && NRF_I2S->CONFIG.SWIDTH != I2S_CONFIG_SWIDTH_SWIDTH_24Bit << I2S_CONFIG_SWIDTH_SWIDTH_Pos) {
                NRF_I2S->CONFIG.SWIDTH = I2S_CONFIG_SWIDTH_SWIDTH_24Bit << I2S_CONFIG_SWIDTH_SWIDTH_Pos;
            }else
            if (dacBitsPerSample == 32 && NRF_I2S->CONFIG.SWIDTH != I2S_CONFIG_SWIDTH_SWIDTH_32Bit << I2S_CONFIG_SWIDTH_SWIDTH_Pos) {
                NRF_I2S->CONFIG.SWIDTH = I2S_CONFIG_SWIDTH_SWIDTH_32Bit << I2S_CONFIG_SWIDTH_SWIDTH_Pos;
            }else
            if (dacBitsPerSample == 16 && NRF_I2S->CONFIG.SWIDTH != I2S_CONFIG_SWIDTH_SWIDTH_16Bit << I2S_CONFIG_SWIDTH_SWIDTH_Pos) {
                NRF_I2S->CONFIG.SWIDTH = I2S_CONFIG_SWIDTH_SWIDTH_16Bit << I2S_CONFIG_SWIDTH_SWIDTH_Pos;
            }

            if (whichBuf) {
                memcpy(dacBuf0, dacBuffer16, samples * 4);
                NRF_I2S->TXD.PTR = (uint32_t)&dacBuf0[0];
            }
            else {
                memcpy(dacBuf1, dacBuffer16, samples * 4);
                NRF_I2S->TXD.PTR = (uint32_t)&dacBuf1[0];
            }
        }

        whichBuf = !whichBuf;

        uint8_t divider = 2;
        if (dacBitsPerSample == 16) {
            divider = 2;
        }
        else if (dacBitsPerSample == 24 || dacBitsPerSample == 32) {
            divider = 4;
        }

        NRF_I2S->RXTXD.MAXCNT = samples * divider;
        NRF_I2S->EVENTS_TXPTRUPD = 0;

        if (started) {
            NRF_I2S->TASKS_START = 1;
        }
    }
    else if (enableDAC == 1) {
        uint32_t timer = millis() + 1000;
        while (NRF_PWM20->EVENTS_DMA.SEQ[0].END == 0) {
            if (millis() > timer) {
                NRF_PWM20->TASKS_DMA.SEQ[0].START = 1;
                return;
            }
        }
        NRF_PWM20->EVENTS_DMA.SEQ[0].END = 0;

        if (dacBitsPerSample > 8) {
            if (whichBuf) {
                memcpy(dacBuf0, dacBuffer16, samples * 2);
            }
            else {
                memcpy(dacBuf1, dacBuffer16, samples * 2);
            }
        }
        else {
            if (whichBuf) {
                for (uint32_t i = 0; i < samples; i++) {
                    dacBuf0[i] = (uint16_t)(dacBuffer[i] << 1);
                }
            }
            else {
                for (uint32_t i = 0; i < samples; i++) {
                    dacBuf1[i] = (uint16_t)(dacBuffer[i] << 1);
                }
            }
        }
        if (whichBuf) {
            NRF_PWM20->DMA.SEQ[0].PTR = ((uint32_t)(&dacBuf0[0]) << PWM_DMA_SEQ_PTR_PTR_Pos);
        }
        else {
            NRF_PWM20->DMA.SEQ[0].PTR = ((uint32_t)(&dacBuf1[0]) << PWM_DMA_SEQ_PTR_PTR_Pos);
        }
        whichBuf = !whichBuf;

        NRF_PWM20->DMA.SEQ[0].MAXCNT = (samples << PWM_DMA_SEQ_MAXCNT_MAXCNT_Pos);
        NRF_PWM20->TASKS_DMA.SEQ[0].START = 1;
    }
}

void AutoAnalog::disableDAC(bool withinTask)
{
    if (enableDAC == 2) {
        NRF_I2S->TASKS_STOP = 1;
        NRF_I2S->ENABLE = 0;
    }
    else if (enableDAC == 1) {
        //NRF_PWM0->TASKS_STOP = 1;
    }
}
